--- a/style.css
+++ b/style.css
@@ -896,12 +896,17 @@ a{
         grid-template-columns: 1fr;
         gap: 25px;
     }
-
+    .btn-title{
+        margin-left: 12%;
+    }
     .project-card {
         min-width: 100%;
         height: 320px;
     }
-
+    .faded-text{
+        left: 28%;
+        bottom: -15%;
+    }
     .skills-container-right {
         gap: 1.5rem;
     }
@@ -1127,10 +1132,13 @@ a{
     .btn-title,
     .btn-hover {
         font-size: 12px;
+        margin-left: 10%;
     }
 
     .faded-text {
+        white-space: nowrap;
         font-size: 2rem;
+        left:35%;
     }
 
     .page-header {
